# stereo_vision_study

./: CLAUDE.md  CMakeLists.txt  hello.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
cli/: __init__.py  config_validator.py  feature_extractor.py
configs/: alike_t_config.yaml  disk_config.yaml  orb_config.yaml  sift_config.yaml  superpoint_config.yaml
docker/: Dockerfile  build.sh  create.sh  run.sh
scripts/: demo_feature_extractor.py
src/: main.cpp
stereo_vision/: __init__.py
stereo_vision/feature_extractor/: __init__.py  alike.py  base.py  config.py  disk.py  factory.py  learned.py  superpoint.py  traditional.py  utils.py
stereo_vision/feature_matcher/: __init__.py  base.py  lightglue.py  loftr.py  superglue.py  traditional.py
stereo_vision/utils/: __init__.py  model_manager.py
